<resources>

    <string name="app_name">Emergency Help</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_main">Emergency Help</string>

    <string name="action_settings">Settings</string>
    <string name="call">Call</string>
    <string name="title_activity_police_">Map</string>
    <string name="title_activity_hospital_">Map</string>
    <string name="title_activity_fire_man">Map</string>
    <string name="title_activity_pharmacy_">Map</string>
    <string name="portuguese">Portuguese</string>
    <string name="english">English</string>
    <string name="title_activity_ambulance_">Ambulance_Activity</string>
    <string name="title_activity_splash__screen__activiry">Emergency Help</string>
    <string name="service_localization">Service And Localization</string>

    <string name="hint">Hints</string>
    <string name="hint1">* Keep calm ... Think!</string>
    <string name="hint2">* Do not touch in the victim</string>
    <string name="hint3">* Establish communication with the victim (name, location, day)</string>
    <string name="hint4">* Try to calm her/him down</string>
    <string name="hint5">* Display respiratory factors</string>
    <string name="hint6">* Do not approach the fire</string>
    <string name="title_activity_fire_man__activity2">FireMan_Activity2</string>

    <string name="hello_world">Hello world!</string>
    <string name="title_activity_map_route">Map</string>
    <string name="title_activity_gas_station1_">Map</string>



</resources>
