<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        tools:context="com.example.eduar_000.myapplication.Ambulance_Activity"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/hint"
            android:textSize="30dp"
            android:typeface="serif"
            android:gravity="center"
            android:background="#ff0000"
            android:layout_marginBottom="30dp"
           />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/hint1"
            style="@style/StyleCss"
            android:layout_marginBottom="10dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/hint2"
            style="@style/StyleCss"
            android:layout_marginBottom="10dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/hint3"
            style="@style/StyleCss"
            android:layout_marginBottom="20dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/hint4"
            style="@style/StyleCss"
            android:layout_marginBottom="10dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/hint5"
            style="@style/StyleCss"
            android:layout_marginBottom="20dp"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:onClick="call"
            android:text="@string/call"
            android:textSize="35dp"
            android:background="@drawable/ligar"/>

    </LinearLayout>
</ScrollView>